--- a/display_binary.ipynb
+++ b/display_binary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "npy_file_path = '/home/ubuntu/mask_randbg_tool/images/output/img0_mask.npy'\n",
+    "npy_file_path = '...'\n",
     "segmentation_mask = np.load(npy_file_path)\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
